<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/itemCreation_llItem"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/itemCreation_paddingGeneral"
    android:paddingTop="@dimen/itemCreation_paddingGeneral"
    android:paddingRight="@dimen/itemCreation_paddingGeneral">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/itemCreation_tieName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/itemCreation_edNameText"
        android:paddingTop="@dimen/itemCreation_paddingTopBottom"
        android:paddingBottom="@dimen/itemCreation_paddingTopBottom"
        app:startIconDrawable="@drawable/ic_action_cart">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/itemCreation_tiiName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/itemCreation_edDescriptionText"
        android:paddingTop="@dimen/itemCreation_paddingTopBottom"
        android:paddingBottom="@dimen/itemCreation_paddingTopBottom">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/itemCreation_etDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/itemCreation_tvItemList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/itemCreation_paddingTopBottom"
        android:text="@string/itemCreation_tvTypeItemText"
        android:textSize="@dimen/itemCreation_textSize_itemList"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/itemCreation_spItemType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/itemType_array"
        android:paddingTop="@dimen/itemCreation_paddingTopBottom"
        android:paddingBottom="@dimen/itemCreation_paddingTopBottom" />

    <TextView
        android:id="@+id/itemCreation_tvRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/itemCreation_paddingTopBottom"
        android:text="@string/itemCreation_tvRateText"
        android:textSize="@dimen/itemCreation_textSize_tvRate"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/itemCreation_llRateTaxable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/itemCreation_paddingBottom_linearLayout">

        <EditText
            android:id="@+id/itemCreation_etRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="8"
            android:inputType="numberDecimal"
            android:paddingBottom="@dimen/itemCreation_paddingGeneral"
            android:textSize="@dimen/itemCreation_textSize_etRate" />

        <CheckBox
            android:id="@+id/itemCreation_chbxTaxable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/itemCreation_marginHorizontal_chbxTaxable"
            android:paddingTop="@dimen/itemCreation_paddingGeneral"
            android:paddingBottom="@dimen/itemCreation_paddingGeneral"
            android:text="@string/itemCreation_chbxTaxableText"
            android:textSize="16dp" />
    </LinearLayout>

    <Button
        android:id="@+id/itemCreation_btnSave"
        android:layout_width="@dimen/itemCreation_layoutWidth_btnSave"
        android:layout_height="@dimen/itemCreation_layoutHeight_btnSave"
        android:layout_gravity="right"
        android:text="@string/itemCreation_btnDoneText"
        android:textSize="@dimen/itemCreation_textSize_btnSave"
        tools:ignore="MissingConstraints" />

</LinearLayout>